# AoC2020

./: README.md  meson.build  run.sh
include/: aocutil.h
src/: day1.c  util.c
